# pySymStat

./: .gitignore  AUTHORS  Leaderboard.py  NUG.py  Partial_Solution.py  README.md  SDP.py  __init__.py  averaging_S2.py  averaging_S2_G.py  averaging_SO3.py  averaging_SO3_G.py  distance.py  distance_S2_G.py  distance_SO3_G.py  mean_variance_sym_grp.py  meanvar.py  projection_direction_cluster.py  projection_direction_mean_S2.py  pyproject.toml  quat_set.py  quaternion.py  quaternion_alg.py  spatial_rotation_mean_SO3.py  spatial_rotation_to_projection_direction.py  symmetry_group.py  symmetry_group_Cn.py  symmetry_group_Dn.py  symmetry_group_TOI.py  symmetry_group_elems_CN_DN.py  symmetry_group_elems_T_O_I.py  symmetry_group_irreducible_rep_CN_DN.py  symmetry_group_irreducible_rep_T_O_I.py  symmetry_group_table.py
demo/: demo.py  demo_conversion.py  demo_distance_S2.py  demo_distance_S2_G.py  demo_distance_SO3.py  demo_distance_SO3_G.py  demo_get_sym_grp.py  demo_mean_S2.py  demo_mean_SO3.py  demo_mean_variance_S2_G.py  demo_mean_variance_SO3_G.py  demo_quat_conj.py  demo_quat_mult.py  demo_quat_rotate.py  demo_quaternion.py  demo_symmetry.py  demo_variance_S2.py  demo_variance_SO3.py  pySymStat  test.py
doc/: build.sh
doc/source/: conf.py  index.rst  leadingBoard.rst  modules.rst  nug.rst  pointGroup.rst  quaternion.rst
src/pySymStat/: Leaderboard.py  NUG.py  PartialSolution.py  __init__.py  averaging_S2.py  averaging_S2_G.py  averaging_SO3.py  averaging_SO3_G.py  (+7 more)
test/: compute_app.py  compute_nug.py  compute_opt.py  generate_dataset.py  run.sh  summary.py
(+10 files in other folders)
